<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Red Cup Bracket App</string>
    <string name="createTournament">Create Tournament</string>
    <string name="loadTournament">Load Tournament</string>
    <string name="pastTournaments">Past Tournaments</string>    
    <string name="participants">Participants</string>
    
    <string name="tournamentNameLabel">Name</string>
    <string name="bracketTypeLabel">Bracket Type</string>
    <string name="participantCountLabel">Participant Count</string>
    <string name="participantCountHint">No Limit</string>
    <string name="help">Help</string>

    <string-array name="bracket_choices">
        <item>Single Elimination</item>
        <item>Double Elimination</item>
    </string-array>
    <string name="createParticipant">Create Participant</string>
    <string name="participantManager">Participant Manager</string>
    <string name="selectParticipant">Select a Participant</string>
    <string name="confirm">Confirm</string>
    <string name="participantNameHint">Participant name</string>
    <string name="tournamentParticipants_Add">Add</string>
    <string name="tournamentParticipants_Start">Start</string>
    <string name="participantSelectorDone">Done</string>
    <string name="participantName">Participant Name</string>
    <string name="history">History</string>
    <string name="save">Save</string>
    <string name="tournamentSetup">Tournament Setup</string>
    <string name="selectParticipants">Select Participants</string>
    
    <string name="EXTRA_TOURNAMENT_ID">EXTRA_TOURNAMENT_ID</string>
    <string name="TOURNAMENT_NAME">TOURNAMENT_NAME</string>
    
    <string name="wonTournamentDialogText">Congratulations</string>
    <string name="wonTournamentDialogTitle">We have a winner!</string>
    
    <string name="tournamentWinnerNameDefault">Tebow</string>
    <string name="tournamentHasWon"> has won </string>
    <string name="tournamentNameDefault">The Superbowl</string>
    <string name="tebowContentDescription">Kneeling in Victory</string>
    <string name="mainMenu">Main Menu</string>
</resources>