<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participantName"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff00" />

    <EditText
        android:id="@+id/editNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName|textCapWords"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/historyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff00" />

    <ListView
        android:id="@+id/historyListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.54" >
    </ListView>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="editParticipant"
        android:text="@string/save" />

</LinearLayout>