<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainMenuScroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10.0dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/createTournament"
            android:layout_width="match_parent"
            android:layout_height="54dip"
            android:layout_marginTop="@dimen/mainMenuButton_topMargin"
            android:background="@android:drawable/list_selector_background"
            android:onClick="switchActivityScreen"
            android:weightSum="1.0" >


            <ImageView
                android:id="@+id/createTournamentImage"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.35"
                android:src="@drawable/create_tournament" />


            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.65"
                android:text="@string/createTournament"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dip"
            android:layout_marginTop="10dp"
            android:background="#ffffff00" />

        <LinearLayout
            android:id="@+id/loadTournament"
            android:layout_width="match_parent"
            android:layout_height="54dip"
            android:layout_marginTop="@dimen/mainMenuButton_topMargin"
            android:background="@android:drawable/list_selector_background"
            android:onClick="switchActivityScreen"
            android:weightSum="1.0" >



            <ImageView
                android:id="@+id/loadTournamentImage"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.35"
                android:src="@drawable/load_tournament" />


            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.65"
                android:text="@string/loadTournament"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dip"
            android:layout_marginTop="10dp"
            android:background="#ffffff00" />

        <LinearLayout
            android:id="@+id/participants"
            android:layout_width="match_parent"
            android:layout_height="54dip"
            android:layout_marginTop="@dimen/mainMenuButton_topMargin"
            android:background="@android:drawable/list_selector_background"
            android:onClick="switchActivityScreen"
            android:weightSum="1.0" >


            <ImageView
                android:id="@+id/participantManagerImage"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.35"
                android:src="@drawable/participant_manager" />


            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.65"
                android:text="@string/participants"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>